# dynalog

./: LICENSE  README.md  Readme.md  comparison.cpp  doxygen.conf  example.cpp  meson.build
include/: ARC.h  ArrayStreambuf.h  Benchmark.h  Buffer.h  Cache.h  Configuration.h  Core.h  Demangle.h  Erasure.h  HandleEmitter.h  Log.h  Logger.h  Message.h  MessageBuffer.h  NamedType.h  ObjectBuffer.h  ProxyOstreambuf.h  Reflection.h  Timestamp.h  util.h
include/async/: Emitter.h  Flush.h  LatencyQueue.h  Replicated.h  RingBuffer.h  Synchronized.h
scripts/: plot_benchmark.py
source/: Cache.cpp  Configuration.cpp  Demangle.cpp  HandleEmitter.cpp  Log.cpp  Message.cpp  Timestamp.cpp  meson.build
source/async/: Emitter.cpp  Flush.cpp
studies/: invocation_comparison.cpp
test/: Erasure.cpp  Log.cpp  Message.cpp  RingBuffer.cpp  Timestamp.cpp  main.cpp  meson.build
